test/compile-fail/identifier/use-path-segment-keyword/top.rhdl
mod a {
    pub struct r#self {}
    pub struct r#use {}
}
use a::r#self;
use a::r#self as selfie;
use a::*;
